--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/vite": "^4.0.0-beta.4",
     "gsap": "^3.12.5",
+    "netlify-cli": "^17.38.0",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
