--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/vite": "^4.0.0-beta.6",
+    "dotenv": "^16.4.7",
     "gsap": "^3.12.5",
     "netlify-cli": "^17.38.0",
     "netlify-identity-widget": "^1.9.2",
+    "node-fetch": "^3.3.2",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
