--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
+    "@tailwindcss/cli": "^4.0.0-beta.6",
+    "@tailwindcss/postcss": "^4.0.0-beta.6",
     "@tailwindcss/vite": "^4.0.0-beta.6",
     "dotenv": "^16.4.7",
     "gsap": "^3.12.5",
