Improve Supabase initialization and error handling
- Refactor Supabase client plugin with robust initialization
- Add retry mechanism for configuration loading
- Enhance error handling and logging
- Update Netlify configuration for functions and dev environment
- Modify Nuxt config to support PostCSS and Netlify Identity proxy

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,11 @@
   publish = "dist"
 
 [dev]
-  command = "nuxt dev"
+  command = "npm run dev"
   targetPort = 3000
-  port = 8888
-  framework = "nuxt"
+  port = 9999
+  framework = "#custom"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
@@ -14,4 +15,6 @@
   status = 200
 
 [functions]
-  directory = "netlify/functions" 
+  directory = "functions"
+  node_bundler = "esbuild"
+  included_files = ["package.json", "package-lock.json"] 
