--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/cli": "^4.0.0-beta.6",
     "@tailwindcss/postcss": "^4.0.0-beta.6",
-    "@tailwindcss/vite": "^4.0.0-beta.6",
+    "@tailwindcss/vite": "^4.0.11",
     "dotenv": "^16.4.7",
     "gsap": "^3.12.5",
     "netlify-cli": "^17.38.0",
@@ -27,6 +27,6 @@
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^4.0.0-beta.6"
+    "tailwindcss": "^4.0.11"
   }
 }
