--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "backfill:track-groups": "tsx scripts/backfill-track-groups.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
@@ -25,6 +26,7 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.0",
     "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.1"
+    "postcss-nesting": "^13.0.1",
+    "tsx": "^4.19.2"
   }
 }
