--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/cli": "^4.0.0-beta.6",
     "dotenv": "^16.4.7",
     "gsap": "^3.12.5",
+    "music-metadata": "^11.9.0",
     "node-fetch": "^3.3.2",
     "nuxt": "^4.1.2",
     "vue": "^3.4.21",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.14",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/jsmediatags": "^3.9.6",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.0",
     "postcss-import": "^16.1.0",
