--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = ".output/public"
+  
+[build.environment]
+  NODE_VERSION = "20.19.0"
 
 [dev]
   command = "npm run dev"
