--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "backfill:track-groups": "tsx scripts/backfill-track-groups.ts"
   },
   "dependencies": {
+    "@iconoir/vue": "^7.11.0",
     "@netlify/functions": "^4.3.0",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/cli": "^4.0.0-beta.6",
