--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/cli": "^4.0.0-beta.6",
     "dotenv": "^16.4.7",
+    "essentia.js": "^0.1.3",
     "gsap": "^3.12.5",
     "music-metadata": "^11.9.0",
     "node-fetch": "^3.3.2",
