feat: Enhance caching and preloading for audio files
- Added aggressive caching headers for audio files from Supabase and static assets in netlify.toml.
- Updated usePlayer and useStemPlayer composables to implement long-term caching for signed URLs with a 24-hour expiry.
- Introduced preloading of the next track in the queue for seamless playback in usePlayer.

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,28 @@
   framework = "#custom"
   publish = "dist"
 
+# Cache audio files from Supabase aggressively
+[[headers]]
+  for = "https://*.supabase.co/storage/v1/object/public/sounds/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+    
+# Cache static assets
+[[headers]]
+  for = "/img/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
