--- a/netlify.toml
+++ b/netlify.toml
@@ -5,11 +5,8 @@
   NODE_VERSION = "20.19.0"
 
 [dev]
-  command = "npm run dev"
   targetPort = 3000
-  port = 9999
-  framework = "#custom"
-  publish = "dist"
+  port = 8888
 
 # Cache audio files from Supabase aggressively
 [[headers]]
@@ -36,4 +33,8 @@
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+# Function configuration for download-sample
+[functions."download-sample"]
+  timeout = 60  # 60 seconds for audio processing 
