--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "@iconoir/vue": "^7.11.0",
     "@netlify/functions": "^4.3.0",
+    "@nuxtjs/seo": "^3.3.0",
     "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/cli": "^4.0.0-beta.6",
     "dotenv": "^16.4.7",
     "essentia.js": "^0.1.3",
-    "fluent-ffmpeg": "^2.1.3",
     "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "gsap": "^3.12.5",
     "music-metadata": "^11.9.0",
     "node-fetch": "^3.3.2",
