refactor: Remove outdated documentation and optimize SEO meta tag handling
- Deleted obsolete files related to caching optimization, Essentia.js key detection, and search filter tasks to streamline the project.
- Updated nuxt.config.ts to enforce page-specific SEO meta tags, removing global defaults to prevent duplication and ensure accurate rendering.
- Added server-side logging in user profile page for better data verification during SSR.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "backfill:track-groups": "tsx scripts/backfill-track-groups.ts"
+    "backfill:track-groups": "tsx scripts/backfill-track-groups.ts",
+    "diagnose:seo": "node scripts/diagnose-seo.js"
   },
   "dependencies": {
     "@iconoir/vue": "^7.11.0",
